Designed layout for activity_add_book.xml

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,10 @@
 <resources>
     <string name="app_name">Booky</string>
     <string name="add">Add</string>
+    <string name="book_title_hint">Title</string>
+    <string name="book_author_hint">Author</string>
+    <string name="book_genre_hint">Genre</string>
+    <string name="book_ISB_hint">ISB</string>
+    <string name="cancel">Cancel</string>
+    <string name="save">Save</string>
 </resources>
